# web3-lottery

./: .gitignore  Cargo.toml  README.md  lib.rs
client/: add_bet.js  add_draw.js  close_draw.js  colors.js  decode.js  exe_lottery_job.js  exe_start_lottery.js  exe_stop_lottery.js  get_draws.js  get_lottery.js  lottery_job.js  lottery_setup.js  open_draw.js  override_draw.js  package-lock.json  package.json  process_draw.js  remove_draw.js  setup_lottery.js  start_lottery.js  stop_lottery.js
src/: assets.rs  e2e_tests.rs  errors.rs  lib.rs  tests.rs
